# 833s-Bot

./: .dockerignore  .gitignore  README.md  pyproject.toml  temp_guild_store.py
scripts/: linux_bootstrap.sh
src/: ENHANCED_OVERHAUL_GUIDE.md  INTERACTIVE_OVERHAUL_GUIDE.md  README.md  README_RENDER.md  RENDER_DEPLOY.md  pyproject.toml  render.yaml  requirements.txt
src/.cursor/: worktrees.json
src/.windsurf/rules/: work-completion-prompt.md
src/docs/: reaction_roles.md
src/guardian/: __init__.py  __main__.py  base_cog.py  bot.py  config.py  database.py  error_handlers.py  errors.py  interfaces.py  logging_setup.py  migration.py  monitoring.py  observability.py  permissions.py  render_entry.py  startup_diagnostics.py  utils.py  validation.py
src/guardian/cogs/: achievements.py  activity_manager.py  admin.py  admin_management.py  ambient.py  anti_raid.py  audit_logs.py  bump_reminder.py  community_memory.py  corporate_overhaul.py  diagnostics.py  dm_cleanup.py  economy.py  events.py  fun.py  giveaways.py  health_check.py  knowledge_base.py  levels.py  levels_full.py  moderation.py  nuke.py  nuke_selective.py  onboarding.py  overhaul.py  overhaul_prod.py  overhaul_temp.py  prefix_community.py  profiles.py  prompts.py  reaction_roles.py  reaction_roles_new.py  rebuild.py  reminders.py  reputation.py  role_assignment.py  role_panel.py  root_management.py  selftest.py  selftest_working.py  (+15 more)
src/guardian/overhaul/: __init__.py  engine.py  http_safety.py  progress.py  progress_reporter.py  rate_limiter.py  reporting.py  spec.py
src/scripts/: windows_bootstrap.ps1
(+128 files in other folders)
